# memory_allocator

./: .cruft.json  .gitmodules  AUTHORS  CONTRIBUTING.md  MANIFEST.in  README.md  cydoctest.py  dense_matrix_pyx.pyx  meson.build  pyproject.toml  setup.py  test.py
.github/workflows/: build_wheels.yml  ci-cygwin-standard.yml  dist.yml  flake.yml  main.yml
memory_allocator/: memory.pxd  memory_allocator.pxd  memory_allocator.pyx  signals.pxd  signals.pyx  signals_backup.pyx  test.pyx
src/memory_allocator/: __init__.pxd  memory_allocator.pyx  signals.pxd  test.pyx
