[build-system]
requires = ["meson-python>=0.15.0", "Cython>=3.0"]
build-backend = "mesonpy"

[project]
name = "memory_allocator"
version = "0.1.4"
description = "An extension class to allocate memory easily with cython"
authors = [
    { name = "Jeroen Demeyer, Nathann Cohen, Jonathan Kliem", email = "sage-devel@googlegroups.com" },
]
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Science/Research",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/sagemath/memory_allocator"
