[build-system]
requires = ["meson-python>=0.15.0", "Cython>=3.0"]
build-backend = "mesonpy"

[project]
name = "memory_allocator"
version = "0.2.0"
description = "An extension class to allocate memory easily with cython"
authors = [
    { name = "Jeroen Demeyer, Nathann Cohen, Jonathan Kliem", email = "sage-devel@googlegroups.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Science/Research",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "cibuildwheel>=2.23.3",
    "cython>=3.1.4",
    "meson>=1.9.0",
    "meson-python>=0.18.0",
    "ninja>=1.13.0",
    "pkgconf>=2.4.3.post2",
]

[project.urls]
Homepage = "https://github.com/sagemath/memory_allocator"


[tool.cibuildwheel]
skip = ["*-win32"]
test-groups = ["dev"]
test-command = "python test.py"
test-sources = ["test.py", "cydoctest.py", "pyproject.toml"]
build-frontend = "build[uv]"
build-verbosity = 1
